# orientation-project-python-23.SUM.B

./: .gitignore  README.md  app.py  models.py  pyproject.toml  test_pytest.py
.github/workflows/: pyright.yml  pytest.yml
