[tool.pylint.format]
good-names = [
    'x', 'y', 'z', 'id', 'ok'
]

[tool.pylint.messages_control]
disable = [
    'missing-module-docstring',
    'no-name-in-module',
    'useless-import-alias',
    'line-too-long',
    'too-many-arguments',
    'too-few-public-methods'
]

[tool.pyright]
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingTypeStubs = false

[tool.poetry]
name = "orientation-project-python-23-sum-b"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pylint = "^2.17.4"
pyright = "^1.1.315"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
